--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,9 +1,13 @@
 .initialPage{
   color: red;
-  border: 1px solid yellow;
   margin-top: 250px;
   text-align: center;
   font-size: 100px;
+}
+
+.Intro{
+  text-align: center;
+  font-size: 20px;
 }
 
 .footer {
